2008-08-23 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/ui/main_app.rb: Grab focus on the result view.

2008-08-23 Mathieu Blondel <mblondel@svn.gnome.org>

    * test/test_edict_file.rb:
    * test/data/edict.eucjp.gz:
    * test/data/edict.utf8.gz:
    * test/data/edict.utf8:
    * test/data/edict.eucjp: Unit test for EdictFile source + test data.

    * lib/fantasdic/sources/edict_file.rb: Better way to choose between the two
    available implementations. Fixed a bunch of bugs spotted by the unit test.

2008-08-23 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/source_base.rb: Renamed load_plugins to load_sources. Also
    the sources used to be added automatically to the list of available sources.
    This was detected when Source::Base was inherited. This behavior was
    changed. Sources now need to be declared with register_source. This allows
    to inherit from Source::Base without adding a source.
    * lib/fantasdic.rb: Renamed load_plugins to load_sources.
    * lib/fantasdic/sources/dict_server.rb: Call register_source.
    * lib/fantasdic/sources/google_translate.rb: Ditto.

2008-08-22 Mathieu Blondel <mblondel@svn.gnome.org>

    * test/test_preferences.rb: Added a test for the save! method.

2008-08-21 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/preferences.rb: Split Preferences into Preferences and
    PreferencesBase; support edge cases in some functions.
    * test/test_preferences.rb: Added unit test.
    * test/data/config.yaml: Data used by the unit test.

2008-08-21 Mathieu Blondel <mblondel@svn.gnome.org>

    * test/test_utils.rb: Unit test for the utils.

2008-08-21 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/ui/main_app.rb: Update the search entry font when the
    dictionary menu is changed rather than when the search entry is activated.

2008-08-20 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/ui/print.rb: Slice the word in the header if it's too long.