@@ -34,26 +34,6 @@ dictionaries_infos:
     - re
     - suffix
     :password: ""
-  Spanish:
-    :auth: false
-    :port: "2628"
-    :sel_strat: define
-    :all_dbs: true
-    :server: es.dict.org
-    :selected: 1
-    :sel_dbs: []
-    :login: ""
-    :avail_strats:
-    - prefix
-    - soundex
-    - regexp
-    - exact
-    - word
-    - substring
-    - lev
-    - re
-    - suffix
-    :password: ""
   Japanese:
     :auth: false
     :port: "2628"
@@ -109,5 +89,4 @@ dont_show_at_startup: false
 dictionaries:
 - English
 - English <-> French
-- Spanish
 - Japanese
